# obp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NLNET_GRANT_PROPOSAL.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  plan.md  setup.sh  task.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rfc.md
.github/workflows/: ci.yml  publish.yml  security.yml
docs/: GLOSSARY.md  PROJECT_CHARTER.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/adr/: 0001-use-fastify-for-reference-server.md  0002-use-drizzle-orm.md  0003-use-redis-for-slot-holds.md  0004-use-http-signatures-for-federation.md  0005-agpl-license.md  README.md  TEMPLATE.md
docs/api/: bookings.md  discovery.md  overview.md  services.md  slots.md  webhooks.md
docs/federation/: discovery.md  overview.md  security.md
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
sdk/python/: README.md  pyproject.toml
sdk/python/obp_client/: __init__.py  client.py  errors.py  http.py  types.py
sdk/python/tests/: test_client.py
server/: .env.example  Dockerfile  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
spec/: .spectral.yaml  REVIEW.md  api.md  entities.md  extensions.md  federation.md  openapi.yaml  package-lock.json  package.json  protocol.md  redocly.yaml  security.md
(+176 files in other folders)
