[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obp-client"
version = "0.1.0"
description = "Official Python client for the OpenBooking Protocol"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OpenBooking Protocol Contributors" }]
keywords = ["obp", "booking", "scheduling", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/openbooking-protocol/obp"
Repository = "https://github.com/openbooking-protocol/obp"
Documentation = "https://docs.obp.dev"

[tool.hatch.build.targets.wheel]
packages = ["obp_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
